<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/editor_main_linear_layout_padding">


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableTop="@drawable/ic_book_black_24dp"
        android:gravity="center_horizontal"
        android:padding="22dp"

        android:paddingTop="40dp"
        android:text="@string/library_view"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
android:textColor="@color/colorAccent"
            android:inputType="text"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/product_price"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textColor="@color/colorAccent"
            android:inputType="number"
            android:importantForAutofill="no" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <android.support.design.button.MaterialButton
            android:id="@+id/subtract_quantity"
            android:layout_width="@dimen/add_subtract_button_size"
            android:layout_height="@dimen/add_subtract_button_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="2dp"
            app:cornerRadius="4dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:icon="@drawable/ic_remove_black_24dp"
            android:textAppearance="?android:textAppearanceSmall"

            />

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/quantity"
                android:textColor="@color/colorAccent"
                android:inputType="number"
                android:importantForAutofill="no" />
        </android.support.design.widget.TextInputLayout>
        <!--Add quantity by one at a time-->
        <android.support.design.button.MaterialButton
            android:id="@+id/add_quantity"
            android:layout_width="@dimen/add_subtract_button_size"
            android:layout_height="@dimen/add_subtract_button_size"

            android:gravity="center"
            android:layout_marginStart="2dp"
            app:icon="@drawable/ic_add_black_24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/source"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:importantForAutofill="no" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/supplier_contact"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/phone"
            android:inputType="number"
            android:importantForAutofill="no" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>