<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="?attr/selectableItemBackground">


    <TextView
        android:id="@+id/name"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="4dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/rounded_borders"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:drawableStart="@drawable/ic_book_black_24dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="15sp"
        tools:text="Books"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"

        android:gravity="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="end"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_textview_corner"
                android:padding="10dp"
                android:text="@string/no"

                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview_corner"
                android:padding="10dp"
                android:text="@string/price1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>


    <android.support.design.button.MaterialButton
        android:id="@+id/button_sale"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        app:backgroundTintMode="add"
        android:layout_toEndOf="@id/name"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/sale"
        android:textAppearance="?android:textAppearanceSmall"
        app:icon="@drawable/ic_add_shopping_cart_black_24dp" />


</RelativeLayout>
